[gd_scene load_steps=9 format=3 uid="uid://gml8gorru1ib"]

[ext_resource type="Script" path="res://UI/Player Select Screen.gd" id="1_l22ls"]
[ext_resource type="Script" path="res://UI/UI.gd" id="1_pyrsy"]
[ext_resource type="PackedScene" uid="uid://uhaxst3vwmo5" path="res://UI/Start_Game_countdown_Panel.tscn" id="2_kslxp"]
[ext_resource type="PackedScene" uid="uid://wlvjpfrdffbj" path="res://PlayerManager.tscn" id="3_0l3n3"]
[ext_resource type="PackedScene" uid="uid://vaog6h0dcfy2" path="res://UI/PlayerPanel.tscn" id="3_e8kt2"]
[ext_resource type="Resource" uid="uid://dr8mdwdophhsb" path="res://Inputs/keyboard_left.tres" id="4_6v6gd"]
[ext_resource type="Resource" uid="uid://108qxs1oy0ow" path="res://Inputs/keyboard_right.tres" id="5_a5xvl"]
[ext_resource type="Script" path="res://Player Join.gd" id="5_p0knl"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_pyrsy")

[node name="LocalPlayerJoin" type="Node" parent="."]
script = ExtResource("5_p0knl")
player_scene = ExtResource("3_0l3n3")
base_action_strings = Array[String](["Up", "Down", "Left", "Right", "Spell1", "Spell2"])
keyboard_input_1 = ExtResource("4_6v6gd")
keyboard_input_2 = ExtResource("5_a5xvl")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Matchmaking Menu" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Matchmaking Menu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Local"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Local" type="Button" parent="PanelContainer/MarginContainer/Matchmaking Menu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 30
text = "Start Local Game"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/Matchmaking Menu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Online
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Matchmaking Menu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Host" type="Button" parent="PanelContainer/MarginContainer/Matchmaking Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Host Online Game
"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Matchmaking Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Join" type="Button" parent="PanelContainer/MarginContainer/Matchmaking Menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 30
text = "Join Online Game
"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Matchmaking Menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/Matchmaking Menu/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "IP:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IP" type="LineEdit" parent="PanelContainer/MarginContainer/Matchmaking Menu/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="Player Select Menu" type="VBoxContainer" parent="PanelContainer"]
visible = false
layout_mode = 2

[node name="PlayerSelectScreen" type="GridContainer" parent="PanelContainer/Player Select Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
script = ExtResource("1_l22ls")
player_panel = ExtResource("3_e8kt2")

[node name="PlayerPanel1" parent="PanelContainer/Player Select Menu/PlayerSelectScreen" instance=ExtResource("3_e8kt2")]
layout_mode = 2

[node name="StartGamePanel" parent="PanelContainer/Player Select Menu" instance=ExtResource("2_kslxp")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="added_new_player" from="LocalPlayerJoin" to="." method="add_player"]
[connection signal="player_quit" from="PanelContainer/Player Select Menu/PlayerSelectScreen" to="LocalPlayerJoin" method="delete_player"]
[connection signal="players_ready" from="PanelContainer/Player Select Menu/PlayerSelectScreen" to="." method="_on_player_select_screen_players_ready"]
[connection signal="players_unready" from="PanelContainer/Player Select Menu/PlayerSelectScreen" to="." method="_on_player_select_screen_players_unready"]
[connection signal="player_quit" from="PanelContainer/Player Select Menu/PlayerSelectScreen/PlayerPanel1" to="PanelContainer/Player Select Menu/PlayerSelectScreen" method="_on_player_quit"]
[connection signal="player_ready" from="PanelContainer/Player Select Menu/PlayerSelectScreen/PlayerPanel1" to="PanelContainer/Player Select Menu/PlayerSelectScreen" method="_on_player_ready"]
[connection signal="player_unready" from="PanelContainer/Player Select Menu/PlayerSelectScreen/PlayerPanel1" to="PanelContainer/Player Select Menu/PlayerSelectScreen" method="_on_player_unready"]
[connection signal="start_round" from="PanelContainer/Player Select Menu/StartGamePanel" to="." method="_on_start_game_panel_start_round"]
